add new relationship

--- a/config/config.json
+++ b/config/config.json
@@ -23,5 +23,9 @@
     "host": "127.0.0.1",
     "dialect": "mysql",
     "operatorsAliases": false
+  },
+  "db": {
+    "loadDbForce": false,
+    "loadDbAlter": false
   }
 }
