--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "joi": "^14.3.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.6",
     "nodemon": "^2.0.3",
     "sequelize": "^5.21.7"
   }
