--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "fs": "0.0.1-security",
+    "googleapis": "^39.2.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "joi": "^14.3.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.1.0",
+    "nexmo": "^2.6.0",
     "nodemailer": "^6.4.6",
     "nodemon": "^2.0.3",
+    "request": "^2.88.2",
     "sequelize": "^5.21.7"
   }
 }
