--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.9.1",
     "mysql2": "^2.1.0",
     "nexmo": "^2.6.0",
+    "node-cron": "^2.0.3",
     "nodemailer": "^6.4.6",
     "nodemon": "^2.0.3",
     "request": "^2.88.2",
