adding promotion manager

--- a/config/config.json
+++ b/config/config.json
@@ -27,7 +27,7 @@
     "operatorsAliases": false
   },
   "db": {
-    "loadDbForce": false,
+    "loadDbForce": true,
     "loadDbAlter": false
   }
 }
