--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bluebird": "^3.7.2",
     "config": "^3.3.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -13,16 +14,20 @@
     "fs": "0.0.1-security",
     "googleapis": "^39.2.0",
     "http-errors": "~1.6.3",
+    "imap": "^0.8.19",
     "ip": "^1.1.5",
     "jade": "~1.11.0",
     "joi": "^14.3.1",
+    "mailparser": "^2.7.7",
     "morgan": "~1.9.1",
     "mysql2": "^2.1.0",
     "nexmo": "^2.6.0",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.4.6",
     "nodemon": "^2.0.3",
+    "os": "^0.1.1",
     "request": "^2.88.2",
-    "sequelize": "^5.21.7"
+    "sequelize": "^5.21.7",
+    "util": "^0.12.3"
   }
 }
