--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "bluebird": "^3.7.2",
     "config": "^3.3.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -15,15 +14,18 @@
     "googleapis": "^39.2.0",
     "http-errors": "~1.6.3",
     "imap": "^0.8.19",
+    "imap-simple": "^5.0.0",
+    "inspect": "0.0.2",
     "ip": "^1.1.5",
+    "is-base64": "^1.1.0",
     "jade": "~1.11.0",
     "joi": "^14.3.1",
-    "mailparser": "^2.7.7",
     "morgan": "~1.9.1",
     "mysql2": "^2.1.0",
     "nexmo": "^2.6.0",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.4.6",
+    "nodemailer-plugin-inline-base64": "^2.1.1",
     "nodemon": "^2.0.3",
     "os": "^0.1.1",
     "request": "^2.88.2",
